# AutonomousBeachRobot

./: .gitignore  README.md
docs/: CLAUDE.md  beach_robot_spec_v2.md
ml/: convert.py  trash.yaml
ml/runs/detect/trash_v2/: results.csv
ros2_ws/mission_control/: setup.py
ros2_ws/perception/: package.xml  setup.py
ros2_ws/src/mission_control/: package.xml  setup.py
ros2_ws/src/mission_control/mission_control/: coordinator.py
ros2_ws/src/perception/: PERCEPTION_NODE.md  package.xml  setup.py
ros2_ws/src/perception/perception/: gps_logger.py  terrain_monitor.py  trash_detector.py
ros2_ws/src/robot_bringup/: package.xml  setup.py
ros2_ws/src/robot_bringup/config/: robot_params.yaml
ros2_ws/src/robot_bringup/launch/: beach_robot.launch.py
ros2_ws/src/v1_navigator/: package.xml  setup.cfg  setup.py
ros2_ws/src/v1_navigator/v1_navigator/: mission_fsm.py
ros2_ws/v1_navigator/: setup.py
tools/: debug_detector.py  fake_camera.py  fake_hardware.py
